# Clinical-Trials-and-Operations

./: README.md  main.py  pyproject.toml
docs/: AGENT_SPECIFICATIONS.md  API_REFERENCE.md  architecture.md
src/agents/: base_agent.py  clinical_experts.py  question_categorizer_agent.py
src/core/: config.py  llm_client.py
src/orchestration/: state.py  workflow.py
src/ui/: app.py  components.py
